# skylet

./: .gitignore  AGENTS.md  AGENT_CONTEXT.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.test.toml  Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  PHASE2_COMPLETION_SUMMARY.md  PHASE_3_PRODUCTION_DEPLOYMENT.md  PHASE_4_PERFORMANCE.md  PROMPT_SKYLET_PLUGIN_CREATION.md  README.md  SECURITY.md  SECURITY_AUDIT_MEMORY_SAFETY.md  SECURITY_AUDIT_PROGRESS.md  SECURITY_AUDIT_README.md  SECURITY_AUDIT_UNSAFE_FFI.md  SECURITY_FINDINGS_INDEX.md  SESSION_COMPLETION_SUMMARY.md  UNSAFE_FIXES_QUICK_REFERENCE.md  book.toml  flake.nix  hot-reload-impl.md  todo.md
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
abi/: Cargo.toml
abi/examples/: echo_plugin.rs
abi/src/: abi_compat.rs  abi_loader.rs  audit.rs  clustering.rs  config_schema.rs  docs_validation.rs  ffi_safe.rs  instance_management.rs  key_management.rs  lib.rs  lifecycle.rs  loaders.rs  mcp_schema.rs  network_transport.rs  rpc.rs  security.rs  service_discovery.rs  symbols.rs  v2_spec.rs
abi/src/config/: mod.rs  schema.rs  secret_resolver.rs  ui_generator.rs  validator.rs
abi/src/dependencies/: constraints.rs  graph.rs  mod.rs  resolver.rs  version.rs
abi/src/http/: mod.rs
abi/src/logging/: correlation.rs  mod.rs  rfc0018_schema.json  schema.rs
abi/src/security_rfc/: capabilities.rs  filesystem.rs  mod.rs  network.rs  policy.rs
abi/src/tracing_mod/: context.rs  exporter.rs  metrics.rs  mod.rs  opentelemetry.rs  span.rs
core/: Cargo.toml
core/src/: auth.rs  config.rs  integration_tests.rs  lib.rs  main.rs  service_registry.rs
core/src/framework/: assertions.rs  database.rs  mod.rs  service.rs
core/src/test/database/: mod.rs
core/src/tests/: database_test.rs  framework_test.rs  framework_tests.rs  hot_reload_tests.rs  integration_tests.rs  mod.rs  wallet_test.rs
core/tests/: auth_tests.rs  service_registry_tests.rs
examples/counter-plugin/: Cargo.toml  README.md
examples/counter-plugin/src/: lib.rs
examples/counter-plugin/tests/: integration.rs
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
examples/hello-plugin/tests/: integration.rs
http-router/: Cargo.toml
http-router/src/: lib.rs  router.rs
job-queue/: Cargo.toml
job-queue/src/: job_queue.rs  lib.rs  v2_ffi.rs
permissions/: Cargo.toml
permissions/src/: auth.rs  authz.rs  http.rs  lib.rs  types.rs  v2_ffi.rs
plugin-packager/: Cargo.toml
plugin-packager/src/: abi_compat.rs  compat_matrix.rs  composition.rs  config.rs  dep_tree.rs  extractor.rs  health_check.rs  lib.rs  main.rs  marketplace.rs  metadata.rs  optional_deps.rs  platform.rs  publish.rs  registry.rs  remote.rs  sandbox.rs  security.rs  signature.rs  upgrade.rs  validation.rs
plugin-packager/tests/: integration_test.rs
plugin-test-harness/: Cargo.toml  README.md
plugin-test-harness/features/: actions.feature  lifecycle.feature  validation.feature
plugin-test-harness/src/: lib.rs  main.rs  test_world.rs
plugin-test-harness/src/steps/: mod.rs  plugin_steps.rs
plugins/audit-logger/: Cargo.toml
plugins/audit-logger/src/: lib.rs
plugins/config-manager/: API.md  Cargo.toml  QUICKSTART.md  README.md
plugins/config-manager/src/: lib.rs  v2_ffi.rs
plugins/file-integrity/: Cargo.toml
plugins/file-integrity/src/: lib.rs
plugins/logging/: API.md  Cargo.toml  QUICKSTART.md  README.md
plugins/logging/src/: lib.rs
plugins/marketplace/: Cargo.toml
plugins/marketplace/migrations/: 2_create_listings.sql
plugins/marketplace/src/: lib.rs
plugins/metrics/: Cargo.toml
plugins/metrics/src/: lib.rs
plugins/network-monitor/: Cargo.toml
plugins/network-monitor/src/: lib.rs
plugins/platform-detect/: Cargo.toml
plugins/platform-detect/src/: lib.rs
plugins/registry/: API.md  Cargo.toml  README.md
plugins/registry/src/: lib.rs
plugins/secrets-manager/: API.md  Cargo.toml  README.md
plugins/secrets-manager/src/: lib.rs  v2_ffi.rs
plugins/security-classifier/: Cargo.toml
plugins/security-classifier/src/: lib.rs
plugins/skylet-plugin-common/: Cargo.toml
plugins/skylet-plugin-common/src/: api_client.rs  api_registry.rs  auth.rs  database.rs  lib.rs  llm_provider.rs  query_builder.rs  schema_migration.rs  template.rs  template_system.rs  tool_calling.rs  workflow_engine.rs
plugins/skylet-plugin-common/src/container_registry_client/: adapters.rs  mod.rs
plugins/skylet-plugin-common/src/git_client/: adapters.rs  mod.rs  security.rs
plugins/skylet-plugin-common/src/kubernetes_client/: adapters.rs  mod.rs
plugins/skylet-plugin-common/src/messaging_platform/: adapters.rs  bot_framework.rs  mod.rs  session_management.rs
plugins/system-monitor/: Cargo.toml
plugins/system-monitor/src/: lib.rs
src/: Cargo.toml  bootstrap.rs  config.rs  lib.rs  logging.rs  main.rs  plugin_test_utils.rs  security.rs  startup.rs  test_env.rs  testing_comprehensive.rs  types.rs
src/cache/: abi.rs  config.rs  event.rs  metadata.rs  mod.rs
src/memory/: arena.rs  mod.rs  pool.rs
src/migrations/: 1_create_users.sql  3_create_transactions.sql  4_create_constraints.sql
src/observability/: metrics.rs  mod.rs  tracing.rs
src/plugin_manager/: dependency_resolver.rs  discovery.rs  dynamic_reload.rs  epoch_guard.rs  failover.rs  hot_reload.rs  lifecycle.rs  manager.rs  manager.rs.backup  mod.rs  rpc_global.rs  version_reload.rs
src/plugin_manager/config/: env_integration.rs  hot_reload.rs  mod.rs  multi_env.rs  schema.rs
src/plugin_manager/enhanced_hot_reload/: mod.rs  rollback.rs  state_manager.rs  types.rs
src/plugin_manager/events/: filtering.rs  mod.rs  plugin_comm.rs  router.rs  storage.rs  types.rs
src/plugin_manager/metrics/: collector.rs  export.rs  mod.rs  plugin_integration.rs  storage.rs  types.rs
src/tracing/: mod.rs
tools/plugin-scaffold/: Cargo.toml
tools/plugin-scaffold/src/: main.rs
tools/plugin-tester/: Cargo.toml  main.rs  plugins.toml
(+94 files in other folders)
