[package]
name = "skylet-abi"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Plugin ABI v2 definitions, FFI types, and service interfaces for the Skylet execution engine"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "skylet_abi"
path = "src/lib.rs"

[[example]]
name = "echo_plugin"
path = "examples/echo_plugin.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
md5 = "0.7"
sha1 = "0.10"
tokio = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
url = "2.5"
regex-lite = "0.1"
thiserror = { workspace = true }
semver = { workspace = true }
jsonschema = "0.46.2"
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = "1.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = "2.2"
ureq = { version = "2.9", features = ["json"] }
parking_lot = { workspace = true }
 
# OpenTelemetry (feature-gated)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true, features = ["trace", "metrics", "tokio"] }
opentelemetry-jaeger-propagator = { version = "0.27", optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }

[features]
default = ["standalone"]
standalone = []
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-jaeger-propagator", "dep:opentelemetry-semantic-conventions"]
postgres = []
