[package]
name = "execution-engine-core"
version = "0.1.0"
edition = "2021"
description = "Core test framework, service registry, and database utilities for execution engine"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
name = "execution_engine_core"
path = "src/lib.rs"

[dependencies]
skylet-abi = { version = "0.2", path = "../abi" }
tokio = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
rusqlite = { version = "0.30", features = ["bundled"] }
tracing = { workspace = true }
 
[dev-dependencies]
tokio-test = { workspace = true }
