[package]
name = "http-router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "HTTP routing with regex pattern matching for plugin-provided API endpoints"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "http_router"
path = "src/lib.rs"

[dependencies]
skylet-abi = { path = "../abi" }
regex = "1"
once_cell = "1"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
