[package]
name = "skylet-http-router"
version = "0.1.0"
edition = "2021"
description = "HTTP routing with regex pattern matching for plugin-provided API endpoints"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
name = "http_router"
path = "src/lib.rs"

[dependencies]
skylet-abi = { version = "0.2", path = "../abi" }
regex = "1"
once_cell = "1"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
