[package]
name = "skylet-job-queue"
version = "0.2.0"
edition = "2021"
description = "Background job processing plugin with persistent storage and scheduled execution"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[features]
default = []
# Enable FFI exports when building as a standalone plugin
plugin = []

[lib]
crate-type = ["rlib"]

[dependencies]
skylet-abi = { version = "0.2", path = "../abi" }
rusqlite = { version = "0.30", features = ["bundled"] }
base64 = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.8"