[package]
name = "permissions"
version = "0.2.0"
edition = "2021"
description = "User-Level Permissions and Context plugin implementing RFC-0023"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skylet-abi = { path = "../abi" }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"
password-hash = "0.5"
subtle = "2.5"
age = "0.11"
ed25519-dalek = { workspace = true }
hex = "0.4"

# HTTP handlers for authentication endpoints
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
