[package]
name = "plugin-packager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Plugin packaging, signing, validation, and distribution utilities"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"
sha2 = { workspace = true }
hex = "0.4"
serde = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
ed25519 = "2.2.3"
ed25519-dalek = "2.2.0"
ring = "0.17.14"
base64 = "0.21"
tracing = { workspace = true }
skylet-plugin-common = { path = "../plugins/skylet-plugin-common" }

[dev-dependencies]
