[package]
name = "plugin-test-harness"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing framework for Skylet plugins with BDD support"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[dependencies]
skylet-abi = { git = "https://github.com/vincents-ai/skylet-abi.git", branch = "main" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
cucumber = { version = "0.21", features = ["output-json", "output-junit"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libloading = "0.8"
tempfile = "3.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
