[package]
name = "plugin-test-harness"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing framework for Skylet plugins with BDD support"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[dependencies]
skylet-abi = { path = "../abi" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
cucumber = { version = "0.21", features = ["output-json", "output-junit"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libloading = "0.8"
tempfile = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
parking_lot = "0.12"
uuid = { version = "1.22", features = ["v4"] }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
