[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"
description = "Core plugin execution engine"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[[bin]]
name = "skylet"
path = "main.rs"

[[bin]]
name = "skylet-lifecycle-cli"
path = "bin/skylet-lifecycle-cli.rs"

[lib]
name = "execution_engine_lib"
path = "lib.rs"

[dependencies]
# Core dependencies
skylet-abi = { version = "0.2", path = "../abi" }
plugin-packager = { version = "0.1", path = "../plugin-packager" }
skylet-permissions = { version = "0.2", path = "../permissions" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }

# Time and parsing
chrono = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
config = "0.13"

# HTTP and web
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Utilities
tempfile = { workspace = true }
dirs = { workspace = true }

# Plugin loading
libloading = { workspace = true }

# Epoch-based memory reclamation for safe hot-reload
crossbeam-epoch = { workspace = true }

# LRU cache for plugin path caching
lru = { workspace = true }

# Async utilities
futures = { workspace = true }

# File watching and regex for config hot-reload
notify = { workspace = true }
regex = { workspace = true }

# System monitoring for metrics
sysinfo = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }

# Security
ed25519-dalek = { workspace = true }
signature = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

# Additional
uuid = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
