[package]
name = "counter-plugin"
version = "0.1.0"
edition = "2021"
description = "Counter plugin demonstrating state management and configuration"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[lib]
name = "counter_plugin"
crate-type = ["cdylib"]

[dependencies]
skylet-abi = { git = "https://github.com/vincents-ai/skylet-abi.git", branch = "main" }

[dev-dependencies]
plugin-test-harness = { path = "../../plugin-test-harness" }
serde_json = "1.0"
