[package]
name = "audit-logger"
version = "0.1.0"
edition = "2021"
description = "Audit logging plugin - logs events to filesystem"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skylet-abi = { path = "../../abi" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
