[package]
name = "config-manager"
version = "0.1.0"
edition = "2021"
description = "Centralized configuration management with TOML/JSON/YAML support, environment overrides, and validation"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Skylet dependencies
skylet-abi = { path = "../../abi" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
toml = "0.8"
config = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utilities
parking_lot = "0.12"

# Tracing
tracing = "0.1"

# Utilities
thiserror = "1"
anyhow = "1"
dirs = "5.0"

[features]
default = []
test = []
