[package]
name = "file-integrity"
version = "0.1.0"
edition = "2021"
description = "File integrity monitoring plugin - computes SHA-256 hashes and detects changes"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skylet-abi = { path = "../../abi" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
