[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "Structured JSON logging backend with RFC-0018 compliance and event buffering"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Skylet dependencies
skylet-abi = { path = "../../abi" }
skylet-plugin-common = { path = "../skylet-plugin-common" }

# Async runtime
tokio = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

[features]
default = []
test = []
