[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "Structured JSON logging backend with RFC-0018 compliance and event buffering"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Skylet dependencies
skylet-abi = { path = "../../abi" }
skylet-plugin-common = { path = "../skylet-plugin-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
lazy_static = "1.4"

[features]
default = []
test = []
