[package]
name = "registry"
version = "0.1.0"
edition = "2021"
description = "Federated plugin registry for plugin discovery, search, and distribution across multiple sources"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
crate-type = ["cdylib"]

[dependencies]
skylet-abi = { path = "../../abi" }
skylet-plugin-common = { path = "../skylet-plugin-common" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
chrono = { workspace = true }
async-trait = { workspace = true }
