[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2021"
description = "Secure secrets management service with AES-256-GCM encryption, versioned storage, and rotation policies"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
crate-type = ["cdylib"]

[dependencies]
skylet-abi = { path = "../../abi" }
skylet-plugin-common = { path = "../skylet-plugin-common" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = { workspace = true }

# For encryption/secrets management
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# For async operations
async-trait = "0.1"
futures = "0.3"

# For configuration loading
toml = "0.8"

# For timestamp handling
chrono = { workspace = true }

# For SQLite persistent storage
rusqlite = { workspace = true }

# For Kubernetes secrets backend (feature-gated)
kube = { version = "0.87", optional = true }
k8s-openapi = { version = "0.27", optional = true, features = ["latest"] }

[features]
default = ["sqlite"]
sqlite = []
kubernetes = ["kube", "k8s-openapi"]
