[package]
name = "security-classifier"
version = "0.1.0"
edition = "2021"
description = "Security classification plugin based on platform detection"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
skylet-abi = { path = "../../abi" }
serde = { workspace = true }
serde_json = { workspace = true }
