[package]
name = "skylet-plugin-common"
version = "0.5.0"
edition = "2021"
description = "Common utilities and abstractions for Skylet plugins - V2 ABI only"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]
repository = "https://github.com/vincents-ai/skylet"

[lib]
name = "skylet_plugin_common"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
skylet-abi = { git = "https://github.com/vincents-ai/skylet.git", tag = "v0.2.0" }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
toml = "0.8"

# HTTP client
ureq = "2.8"
urlencoding = "2.1"

# For secrets management
sha2 = "0.10"
rand = "0.8"

# For RPC and event management
tokio-stream = "0.1"
serde_bytes = "0.11"
futures = "0.3"

# For API authentication
base64 = "0.21"

# For OAuth2 URL handling
url = "2.4"

# For security validation
once_cell = "1.19"
regex = "1.10"
