[package]
name = "plugin-scaffold"
version = "0.1.0"
edition = "2021"
description = "Scaffold a new Skylet plugin"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[[bin]]
name = "plugin-scaffold"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
