[package]
name = "plugin-tester"
version = "0.1.0"
edition = "2021"
description = "Configurable plugin testing tool"
license = "MIT OR Apache-2.0"
authors = ["Skylet Team"]

[[bin]]
name = "plugin-tester"
path = "main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
libloading = "0.8"
